[package]
name = "site"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
actix-cors = "0.7.1"
actix-files = "0.6.7"
actix-web = "4.11.0"
# dotenvy = "0.15.7"
# log = "0.4.25"
# serde = { version = "1.0.217", features = ["derive"] }
# serde_json = "1.0.137"
# sqlx = "0.8.3"
tokio = { version = "1.47.1", features = ["full"] }
